syntax = "proto3";

package user;

service AuthService {    
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
    rpc ParseBearerToken(ParseBearerTokenRequest) returns (ParseBearerTokenResponse);
    rpc ValidateGoogleToken(ValidateGoogleTokenRequest) returns (ValidateGoogleTokenResponse);
    rpc LoginGoogle(LoginGoogleRequest) returns (LoginGoogleResponse);
}

message RegisterUserRequest {
    string credentials = 1;
    string nickname = 2;
}

message RegisterUserResponse {
    bool success = 1;
    string message = 2;
}

message LoginUserRequest {
    string credentials = 1;
}

message LoginUserResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message ParseBearerTokenRequest {
    string token = 1;    
}

message ParseBearerTokenResponse {
    string sub = 1;
    string role = 2;
}

message ValidateGoogleTokenRequest {
    string idToken = 1;
}

message ValidateGoogleTokenResponse {
    bool success = 1;
    string message = 2;
}

message LoginGoogleRequest {
    string email = 1;
    string nickname = 2;
    string profile = 3;
}

message LoginGoogleResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

service UserService {
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message UserProto {
    string id = 1;
    string email = 2;
    string nickname = 3;
    optional string profile = 4;
    string role = 5;
}

message Filter {
    string field = 1;
    string value = 2;
}

message Sort {
    string orderBy = 1;
    string order = 2;
}

message GetUserInfoRequest {
    string userId = 1;
}

message GetUserInfoResponse {    
    UserProto user = 1;
}

message GetUsersRequest {
    Filter filter = 1;    
    repeated Sort sort = 2;
    int32 page = 3; 
    int32 limit = 4; 
}

message GetUsersResponse {    
    repeated UserProto users = 1;
    int32 totalCount = 2;   
}

message GrpcError {
    int32 code = 1;
    string details = 2;
}